@@ -127,7 +127,7 @@
       <gedit:Begin>CHARSET=</gedit:Begin>
     </gedit:Tag>
  
-    <gedit:Tag _name="Checked(state)">
+    <gedit:Tag _name="Checked (state)">
       <gedit:Begin>CHECKED</gedit:Begin>
     </gedit:Tag>
  
