@@ -3,22 +3,22 @@
   
   <gedit:TagGroup _name="Latex - Tags">
 
-    <gedit:Tag _name="Bibliography cite">
+    <gedit:Tag _name="Bibliography (cite)">
       <gedit:Begin>\cite{ </gedit:Begin>
       <gedit:End> } </gedit:End>
     </gedit:Tag>
 
-    <gedit:Tag _name="Bibliography item">
+    <gedit:Tag _name="Bibliography (item)">
       <gedit:Begin>\bibitem{ </gedit:Begin>
       <gedit:End> }{} &#10;</gedit:End>
     </gedit:Tag>
 
-    <gedit:Tag _name="Bibliography shortcite">
+    <gedit:Tag _name="Bibliography (shortcite)">
       <gedit:Begin>\shortcite{ </gedit:Begin>
       <gedit:End>  }</gedit:End>
     </gedit:Tag>
 
-    <gedit:Tag _name="Bibliography thebibliography">
+    <gedit:Tag _name="Bibliography (thebibliography)">
       <gedit:Begin>\begin{thebibliography}{99}&#10;</gedit:Begin>
       <gedit:End>&#10;\end{thebibliography}</gedit:End>
     </gedit:Tag>
