@@ -1,5 +1,13 @@
 2005-08-04  Paolo Maggi  <paolo@gnome.org>
 
+	Fixed bug #302376: Some typos in the gedit .po file
+
+	* taglist/HTML.tags.xml.in: fixed typo
+
+	* taglist/Latex.tags.xml.in: fixed typos
+
+2005-08-04  Paolo Maggi  <paolo@gnome.org>
+
 	Fixed bug #308816: Misspelled word ("mispelled [sic]") in gedit spell 
 	checker dialog
 	
